test/expected/explain_o_exclam__b++delete.out
explain bool operator!() = delete
           ^
12: error: "delete" can be used only for special member functions
